feat(html): change class location

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <div class="wrap">
-    <div class="sticker"></div>
-    <div class="msg">new!</div>
+    <img src="img/sticker.png" class="sticker">
+    <div><img src="img/logo.svg"class="logo"></div>
   </div>
 
 </body>
