feat(html): add nav and codeine link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
   <div class="wrap">
     <img src="img/sticker.png" class="sticker">
     <div><img src="img/logo.svg"class="logo"></div>
+
+    <ul class="nav" id="nav" role="nav">
+        <li><a class="island-half nav-current" href="" role="link">About</a></li>
+        <li><a class="island-half" href="" role="link">Portfolio</a></li>
+        <li><a class="island-half" href="" role="link">Contact</a></li>
+    </ul>
   </div>
+
+  <!--http://codepen.io/valhead/pen/rfump?editors=1100-->
+
+
 
 </body>
 </html>
